@@ -2,6 +2,8 @@ User johns
 Date:
 
     Release Version 0.5.1
+    Support display with non-square pixels.
+    Initial ADTS (AAC+) support.
     Fix bug #959: log flooded with service messages.
 
 User durchflieger
